syntax = "proto3";
package proto;

option go_package = ".;proto";

message LogOnEvent {
  bytes username = 1;
  bytes password = 2;
  bytes token = 3;
}

message TheaterLogOnEvent {
  bytes room  = 1;
  bytes token = 2;
}
